--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,5 +24,5 @@ jobs:
           directory: ./_flows
           resource: flow
           server: http://34.116.118.43:8080
-          username: admin@kestra.io
+          user: admin@kestra.io
           password: Admin1234
