--- a/_flows/example.yml
+++ b/_flows/example.yml
@@ -4,7 +4,7 @@ namespace: company.team
 tasks:
   - id: hi
     type: io.kestra.plugin.core.log.Log
-    message: Hi!!!!!!!!!!!!!!!!!!!
+    message: Hi Ho!
 
 triggers:
   - id: every_minute
