--- a/.github/workflows/kestra-action.yml
+++ b/.github/workflows/kestra-action.yml
@@ -18,6 +18,7 @@ jobs:
     steps:
       - name: Checkout repo content
         uses: actions/checkout@v4
+
       - name: Validate all flows on server-side
         uses: kestra-io/validate-action@master
         with:
@@ -36,10 +37,21 @@ jobs:
       # so we have two different steps for our two namespaces product and engineering
       - name: Checkout repo content
         uses: actions/checkout@v4
-      - name: Deploy flows
+
+      - name: Deploy company.team
         uses: kestra-io/deploy-action@master
         with:
           namespace: company.team
+          directory: ./_flows
+          resource: flow
+          server: http://34.116.118.43:8080
+          user: ${{ secrets.KESTRA_USER }}
+          password: ${{ secrets.KESTRA_PASSWORD }}
+          
+      - name: Deploy zoomcamp
+        uses: kestra-io/deploy-action@master
+        with:
+          namespace: zoomcamp
           directory: ./_flows
           resource: flow
           server: http://34.116.118.43:8080
