--- a/.github/workflows/kestra-action.yml
+++ b/.github/workflows/kestra-action.yml
@@ -19,7 +19,16 @@ jobs:
       - name: Checkout repo content
         uses: actions/checkout@v4
 
-      - name: Validate all flows on server-side
+      - name: Validate all flows on server-side _flows_example
+        uses: kestra-io/validate-action@master
+        with:
+          directory: ./_flows_example
+          resource: flow
+          server: http://34.116.118.43:8080
+          user: ${{ secrets.KESTRA_USER }}
+          password: ${{ secrets.KESTRA_PASSWORD }}
+
+      - name: Validate all flows on server-side _flows
         uses: kestra-io/validate-action@master
         with:
           directory: ./_flows
@@ -38,16 +47,16 @@ jobs:
       - name: Checkout repo content
         uses: actions/checkout@v4
 
-      - name: Deploy company.team
+      - name: Deploy company.team (example)
         uses: kestra-io/deploy-action@master
         with:
           namespace: company.team
-          directory: ./_flows
+          directory: ./_flows_example
           resource: flow
           server: http://34.116.118.43:8080
           user: ${{ secrets.KESTRA_USER }}
           password: ${{ secrets.KESTRA_PASSWORD }}
-          
+
       - name: Deploy zoomcamp
         uses: kestra-io/deploy-action@master
         with:
