--- a/.github/workflows/kestra-action-merge.yml
+++ b/.github/workflows/kestra-action-merge.yml
@@ -1,10 +1,8 @@
 name: Kestra CI/DC
 
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+  # Triggers the workflow on push/merge events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
     branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -24,7 +22,7 @@ jobs:
         with:
           directory: ./_flows_example
           resource: flow
-          server: http://34.116.118.43:8080
+          server: http://34.40.211.23:8080
           user: ${{ secrets.KESTRA_USER }}
           password: ${{ secrets.KESTRA_PASSWORD }}
 
@@ -33,7 +31,7 @@ jobs:
         with:
           directory: ./_flows
           resource: flow
-          server: http://34.116.118.43:8080
+          server: http://34.40.211.23:8080
           user: ${{ secrets.KESTRA_USER }}
           password: ${{ secrets.KESTRA_PASSWORD }}
 
@@ -53,7 +51,7 @@ jobs:
           namespace: company.team
           directory: ./_flows_example
           resource: flow
-          server: http://34.116.118.43:8080
+          server: http://34.40.211.23:8080
           user: ${{ secrets.KESTRA_USER }}
           password: ${{ secrets.KESTRA_PASSWORD }}
 
@@ -63,7 +61,7 @@ jobs:
           namespace: zoomcamp
           directory: ./_flows
           resource: flow
-          server: http://34.116.118.43:8080
+          server: http://34.40.211.23:8080
           user: ${{ secrets.KESTRA_USER }}
           password: ${{ secrets.KESTRA_PASSWORD }}
 
