Update and rename example.yml to say_hi_1.yml

--- a/_flows_example/say_hi_1.yml
+++ b/_flows_example/say_hi_1.yml
@@ -4,7 +4,7 @@ namespace: company.team
 tasks:
   - id: hi
     type: io.kestra.plugin.core.log.Log
-    message: Hi Ho yoyo!
+    message: Hi Ho yoyo from github!
 
 triggers:
   - id: every_minute
